// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectInput /> should have some hintText 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 NotchedBase_root__1r7zdxg0"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey"
    >
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fz useBoxStyles_flexWrap_nowrap__7o6k06gr useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gw"
      >
        <select
          autocomplete="off"
          class="reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_select__6swfds7 useBoxStyles_flexGrow_1__7o6k06go SelectInput_input__hhupzp0 SelectInput_paddedInput__hhupzp1 reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 withEnhancedInput_input_itself_root__bd4oid0 withEnhancedInput_inputItselfSize_medium_root_any__bd4oida"
        >
          <option
            value="a"
          >
            Value 1
          </option>
          <option
            value="b"
          >
            Value 2
          </option>
          <option
            value="c"
          >
            Value 3
          </option>
        </select>
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k065w useBoxStyles_display_flex__7o6k06fb useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hc useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fz useBoxStyles_flexShrink_0__7o6k06gp SelectInput_arrow__hhupzp2"
        >
          <i
            class="useBoxStyles_display_block__7o6k06fa Icon_makeResponsiveStyle_key_bp__14sz1q64"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__7o6k06fa useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_textAlign_left__7o6k06f2 useBoxStyles_pointerEvents_none__7o6k06hc NotchedBase_borderVisualDefaults__1r7zdxg2 NotchedBase_borders_root_default__1r7zdxg3"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_leading__1r7zdxg5 InputState_natural_default_borderColour__9z39d75"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_middle__1r7zdxg6 InputState_natural_default_borderColour__9z39d75"
        style="width: 0px;"
      >
        <label
          class="reset_inlineText__6swfds2 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_makeResponsiveStyle_key_bp__7o6k065g useBoxStyles_makeResponsiveStyle_key_bp__7o6k066k useBoxStyles_makeResponsiveStyle_key_bp__7o6k067o useBoxStyles_makeResponsiveStyle_key_bp__7o6k068s useBoxStyles_display_inline__7o6k06fd useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hc NotchedBase_placeholder_default__1r7zdxgs useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_placeholder_mutedLabelStyles__1r7zdxgt NotchedBase_placeholderPlacement_medium_default__1r7zdxgx"
        >
          Hello World!
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_trailing__1r7zdxg7 InputState_natural_default_borderColour__9z39d75 InputState_natural_default_borderColour__9z39d75"
      />
    </div>
  </div>
  <p
    class="reset_blockText__6swfdsc useBoxStyles_textAlign_left__7o6k06f2 useTextStyles_root__w6to7i0 reset_blockText__6swfdsc useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_2__w6to7i2 reset_blockText__6swfdsc useBoxStyles_makeResponsiveStyle_key_bp__7o6k064k useBoxStyles_makeResponsiveStyle_key_bp__7o6k0684 HintText_hintText__w01siw0 InputState_natural_default_colour__9z39d74"
  >
    hint text
  </p>
</div>
`;

exports[`<SelectInput /> should match snapshot 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 NotchedBase_root__1r7zdxg0"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey"
    >
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fz useBoxStyles_flexWrap_nowrap__7o6k06gr useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gw"
      >
        <select
          autocomplete="off"
          class="reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_select__6swfds7 useBoxStyles_flexGrow_1__7o6k06go SelectInput_input__hhupzp0 SelectInput_paddedInput__hhupzp1 reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 withEnhancedInput_input_itself_root__bd4oid0 withEnhancedInput_inputItselfSize_medium_root_any__bd4oida"
        >
          <option
            value="a"
          >
            Value 1
          </option>
          <option
            value="b"
          >
            Value 2
          </option>
          <option
            value="c"
          >
            Value 3
          </option>
        </select>
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k065w useBoxStyles_display_flex__7o6k06fb useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hc useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fz useBoxStyles_flexShrink_0__7o6k06gp SelectInput_arrow__hhupzp2"
        >
          <i
            class="useBoxStyles_display_block__7o6k06fa Icon_makeResponsiveStyle_key_bp__14sz1q64"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__7o6k06fa useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_textAlign_left__7o6k06f2 useBoxStyles_pointerEvents_none__7o6k06hc NotchedBase_borderVisualDefaults__1r7zdxg2 NotchedBase_borders_root_default__1r7zdxg3"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_leading__1r7zdxg5 InputState_natural_default_borderColour__9z39d75"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_middle__1r7zdxg6 InputState_natural_default_borderColour__9z39d75"
        style="width: 0px;"
      >
        <label
          class="reset_inlineText__6swfds2 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_makeResponsiveStyle_key_bp__7o6k065g useBoxStyles_makeResponsiveStyle_key_bp__7o6k066k useBoxStyles_makeResponsiveStyle_key_bp__7o6k067o useBoxStyles_makeResponsiveStyle_key_bp__7o6k068s useBoxStyles_display_inline__7o6k06fd useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hc NotchedBase_placeholder_default__1r7zdxgs useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_placeholder_mutedLabelStyles__1r7zdxgt NotchedBase_placeholderPlacement_medium_default__1r7zdxgx"
        >
          Hello World!
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_trailing__1r7zdxg7 InputState_natural_default_borderColour__9z39d75 InputState_natural_default_borderColour__9z39d75"
      />
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> should match snapshot when active 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 NotchedBase_root__1r7zdxg0"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey"
    >
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fz useBoxStyles_flexWrap_nowrap__7o6k06gr useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gw"
      >
        <select
          autocomplete="off"
          class="reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_select__6swfds7 useBoxStyles_flexGrow_1__7o6k06go SelectInput_input__hhupzp0 SelectInput_paddedInput__hhupzp1 reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 withEnhancedInput_input_itself_root__bd4oid0 withEnhancedInput_inputItselfSize_medium_root_any__bd4oida"
        >
          <option
            value="a"
          >
            Value 1
          </option>
          <option
            value="b"
          >
            Value 2
          </option>
          <option
            value="c"
          >
            Value 3
          </option>
        </select>
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k065w useBoxStyles_display_flex__7o6k06fb useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hc useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fz useBoxStyles_flexShrink_0__7o6k06gp SelectInput_arrow__hhupzp2"
        >
          <i
            class="useBoxStyles_display_block__7o6k06fa Icon_makeResponsiveStyle_key_bp__14sz1q64"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__7o6k06fa useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_textAlign_left__7o6k06f2 useBoxStyles_pointerEvents_none__7o6k06hc NotchedBase_borderVisualDefaults__1r7zdxg2 NotchedBase_borders_root_default__1r7zdxg3"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_leading__1r7zdxg5 InputState_activeBorderColour__9z39d71"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_middle__1r7zdxg6 InputState_activeBorderColour__9z39d71"
        style="width: 16px;"
      >
        <label
          class="reset_inlineText__6swfds2 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_makeResponsiveStyle_key_bp__7o6k065g useBoxStyles_makeResponsiveStyle_key_bp__7o6k066k useBoxStyles_makeResponsiveStyle_key_bp__7o6k067o useBoxStyles_makeResponsiveStyle_key_bp__7o6k068s useBoxStyles_display_inline__7o6k06fd useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hc NotchedBase_placeholder_default__1r7zdxgs InputState_activeColour__9z39d70 useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_placeholderPlacement_medium_shifted__1r7zdxgz"
        >
          Hello World!
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_trailing__1r7zdxg7 InputState_activeBorderColour__9z39d71 InputState_activeBorderColour__9z39d71"
      />
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> should match snapshot when touched 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 NotchedBase_root__1r7zdxg0"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey"
    >
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fz useBoxStyles_flexWrap_nowrap__7o6k06gr useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gw"
      >
        <select
          autocomplete="off"
          class="reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_select__6swfds7 useBoxStyles_flexGrow_1__7o6k06go SelectInput_input__hhupzp0 SelectInput_paddedInput__hhupzp1 reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 withEnhancedInput_input_itself_root__bd4oid0 withEnhancedInput_inputItselfSize_medium_root_any__bd4oida"
        >
          <option
            value="a"
          >
            Value 1
          </option>
          <option
            value="b"
          >
            Value 2
          </option>
          <option
            value="c"
          >
            Value 3
          </option>
        </select>
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k065w useBoxStyles_display_flex__7o6k06fb useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hc useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fz useBoxStyles_flexShrink_0__7o6k06gp SelectInput_arrow__hhupzp2"
        >
          <i
            class="useBoxStyles_display_block__7o6k06fa Icon_makeResponsiveStyle_key_bp__14sz1q64"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__7o6k06fa useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_textAlign_left__7o6k06f2 useBoxStyles_pointerEvents_none__7o6k06hc NotchedBase_borderVisualDefaults__1r7zdxg2 NotchedBase_borders_root_default__1r7zdxg3"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_leading__1r7zdxg5 InputState_error_default_borderColour__9z39d7d"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_middle__1r7zdxg6 InputState_error_default_borderColour__9z39d7d"
        style="width: 0px;"
      >
        <label
          class="reset_inlineText__6swfds2 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_makeResponsiveStyle_key_bp__7o6k065g useBoxStyles_makeResponsiveStyle_key_bp__7o6k066k useBoxStyles_makeResponsiveStyle_key_bp__7o6k067o useBoxStyles_makeResponsiveStyle_key_bp__7o6k068s useBoxStyles_display_inline__7o6k06fd useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hc NotchedBase_placeholder_default__1r7zdxgs useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_placeholder_mutedLabelStyles__1r7zdxgt NotchedBase_placeholderPlacement_medium_default__1r7zdxgx"
        >
          Hello World!
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_trailing__1r7zdxg7 InputState_error_default_borderColour__9z39d7d InputState_error_default_borderColour__9z39d7d"
      />
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> should match snapshot when touched and invalid 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 NotchedBase_root__1r7zdxg0"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey"
    >
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fz useBoxStyles_flexWrap_nowrap__7o6k06gr useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gw"
      >
        <select
          autocomplete="off"
          class="reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_select__6swfds7 useBoxStyles_flexGrow_1__7o6k06go SelectInput_input__hhupzp0 SelectInput_paddedInput__hhupzp1 reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 withEnhancedInput_input_itself_root__bd4oid0 withEnhancedInput_inputItselfSize_medium_root_any__bd4oida"
        >
          <option
            value="a"
          >
            Value 1
          </option>
          <option
            value="b"
          >
            Value 2
          </option>
          <option
            value="c"
          >
            Value 3
          </option>
        </select>
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k065w useBoxStyles_display_flex__7o6k06fb useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hc useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fz useBoxStyles_flexShrink_0__7o6k06gp SelectInput_arrow__hhupzp2"
        >
          <i
            class="useBoxStyles_display_block__7o6k06fa Icon_makeResponsiveStyle_key_bp__14sz1q64"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__7o6k06fa useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_textAlign_left__7o6k06f2 useBoxStyles_pointerEvents_none__7o6k06hc NotchedBase_borderVisualDefaults__1r7zdxg2 NotchedBase_borders_root_default__1r7zdxg3"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_leading__1r7zdxg5 InputState_error_default_borderColour__9z39d7d"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_middle__1r7zdxg6 InputState_error_default_borderColour__9z39d7d"
        style="width: 0px;"
      >
        <label
          class="reset_inlineText__6swfds2 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_makeResponsiveStyle_key_bp__7o6k065g useBoxStyles_makeResponsiveStyle_key_bp__7o6k066k useBoxStyles_makeResponsiveStyle_key_bp__7o6k067o useBoxStyles_makeResponsiveStyle_key_bp__7o6k068s useBoxStyles_display_inline__7o6k06fd useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hc NotchedBase_placeholder_default__1r7zdxgs useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_placeholder_mutedLabelStyles__1r7zdxgt NotchedBase_placeholderPlacement_medium_default__1r7zdxgx"
        >
          Hello World!
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_trailing__1r7zdxg7 InputState_error_default_borderColour__9z39d7d InputState_error_default_borderColour__9z39d7d"
      />
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> should match snapshot when touched and valid 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 NotchedBase_root__1r7zdxg0"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey"
    >
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fz useBoxStyles_flexWrap_nowrap__7o6k06gr useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gw"
      >
        <select
          autocomplete="off"
          class="reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_select__6swfds7 useBoxStyles_flexGrow_1__7o6k06go SelectInput_input__hhupzp0 SelectInput_paddedInput__hhupzp1 reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 withEnhancedInput_input_itself_root__bd4oid0 withEnhancedInput_inputItselfSize_medium_root_any__bd4oida"
        >
          <option
            value="a"
          >
            Value 1
          </option>
          <option
            value="b"
          >
            Value 2
          </option>
          <option
            value="c"
          >
            Value 3
          </option>
        </select>
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k065w useBoxStyles_display_flex__7o6k06fb useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hc useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fz useBoxStyles_flexShrink_0__7o6k06gp SelectInput_arrow__hhupzp2"
        >
          <i
            class="useBoxStyles_display_block__7o6k06fa Icon_makeResponsiveStyle_key_bp__14sz1q64"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__7o6k06fa useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_textAlign_left__7o6k06f2 useBoxStyles_pointerEvents_none__7o6k06hc NotchedBase_borderVisualDefaults__1r7zdxg2 NotchedBase_borders_root_default__1r7zdxg3"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_leading__1r7zdxg5 InputState_success_default_borderColour__9z39d77"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_middle__1r7zdxg6 InputState_success_default_borderColour__9z39d77"
        style="width: 0px;"
      >
        <label
          class="reset_inlineText__6swfds2 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_makeResponsiveStyle_key_bp__7o6k065g useBoxStyles_makeResponsiveStyle_key_bp__7o6k066k useBoxStyles_makeResponsiveStyle_key_bp__7o6k067o useBoxStyles_makeResponsiveStyle_key_bp__7o6k068s useBoxStyles_display_inline__7o6k06fd useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hc NotchedBase_placeholder_default__1r7zdxgs useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_placeholder_mutedLabelStyles__1r7zdxgt NotchedBase_placeholderPlacement_medium_default__1r7zdxgx"
        >
          Hello World!
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_trailing__1r7zdxg7 InputState_success_default_borderColour__9z39d77 InputState_success_default_borderColour__9z39d77"
      />
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> should match snapshot with custom icon 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew input-class"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 NotchedBase_root__1r7zdxg0"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey"
    >
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fz useBoxStyles_flexWrap_nowrap__7o6k06gr useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gw"
      >
        <select
          autocomplete="off"
          class="reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_select__6swfds7 useBoxStyles_flexGrow_1__7o6k06go SelectInput_input__hhupzp0 SelectInput_paddedInput__hhupzp1 reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 withEnhancedInput_input_itself_root__bd4oid0 withEnhancedInput_inputItselfSize_medium_root_any__bd4oida"
        />
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k065w useBoxStyles_display_flex__7o6k06fb useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hc useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fz useBoxStyles_flexShrink_0__7o6k06gp SelectInput_arrow__hhupzp2"
        >
          <i
            class="useBoxStyles_display_block__7o6k06fa Icon_makeResponsiveStyle_key_bp__14sz1q64"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__7o6k06fa useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_textAlign_left__7o6k06f2 useBoxStyles_pointerEvents_none__7o6k06hc NotchedBase_borderVisualDefaults__1r7zdxg2 NotchedBase_borders_root_default__1r7zdxg3"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_leading__1r7zdxg5 InputState_natural_default_borderColour__9z39d75"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_middle__1r7zdxg6 InputState_natural_default_borderColour__9z39d75"
        style="width: 0px;"
      >
        <label
          class="reset_inlineText__6swfds2 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_makeResponsiveStyle_key_bp__7o6k065g useBoxStyles_makeResponsiveStyle_key_bp__7o6k066k useBoxStyles_makeResponsiveStyle_key_bp__7o6k067o useBoxStyles_makeResponsiveStyle_key_bp__7o6k068s useBoxStyles_display_inline__7o6k06fd useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hc NotchedBase_placeholder_default__1r7zdxgs useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_placeholder_mutedLabelStyles__1r7zdxgt NotchedBase_placeholderPlacement_medium_default__1r7zdxgx"
        >
          placeholder something
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_trailing__1r7zdxg7 InputState_natural_default_borderColour__9z39d75 InputState_natural_default_borderColour__9z39d75"
      />
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> should match snapshot with prefix icon 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew input-class"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 NotchedBase_root__1r7zdxg0"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey"
    >
      <i
        class="useBoxStyles_display_block__7o6k06fa Icon_makeResponsiveStyle_key_bp__14sz1q64 reset_block__6swfds3 useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hc withEnhancedInput_iconRoot__bd4oide withEnhancedInput_prefixIcon__bd4oidf withEnhancedInput_iconSize_medium__bd4oidi InputState_natural_default_colour__9z39d74"
        role="presentation"
      >
        <svg
          class="useBoxStyles_display_block__7o6k06fa useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fz useBoxStyles_flexWrap_nowrap__7o6k06gr useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gw"
      >
        <select
          autocomplete="off"
          class="reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_select__6swfds7 useBoxStyles_flexGrow_1__7o6k06go SelectInput_input__hhupzp0 SelectInput_paddedInput__hhupzp1 reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 withEnhancedInput_input_itself_root__bd4oid0 withEnhancedInput_inputItselfSize_medium_root_any__bd4oida withEnhancedInput_inputItselfSize_medium_prefixed_any__bd4oidc"
        />
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k065w useBoxStyles_display_flex__7o6k06fb useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hc useBoxStyles_makeResponsiveStyle_key_bp__7o6k06fz useBoxStyles_flexShrink_0__7o6k06gp SelectInput_arrow__hhupzp2"
        >
          <i
            class="useBoxStyles_display_block__7o6k06fa Icon_makeResponsiveStyle_key_bp__14sz1q64"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__7o6k06fa useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_textAlign_left__7o6k06f2 useBoxStyles_pointerEvents_none__7o6k06hc NotchedBase_borderVisualDefaults__1r7zdxg2 NotchedBase_borders_root_default__1r7zdxg3"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_leading__1r7zdxg5 InputState_natural_default_borderColour__9z39d75"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_middle__1r7zdxg6 InputState_natural_default_borderColour__9z39d75"
        style="width: 0px;"
      >
        <label
          class="reset_inlineText__6swfds2 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_makeResponsiveStyle_key_bp__7o6k065g useBoxStyles_makeResponsiveStyle_key_bp__7o6k066k useBoxStyles_makeResponsiveStyle_key_bp__7o6k067o useBoxStyles_makeResponsiveStyle_key_bp__7o6k068s useBoxStyles_display_inline__7o6k06fd useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hc NotchedBase_placeholder_default__1r7zdxgs useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_placeholder_mutedLabelStyles__1r7zdxgt NotchedBase_placeholderPlacement_medium_defaultPrefixed__1r7zdxgy"
        >
          placeholder something
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_trailing__1r7zdxg7 InputState_natural_default_borderColour__9z39d75 InputState_natural_default_borderColour__9z39d75"
      />
    </div>
  </div>
</div>
`;
